2006-03-16  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: add python-mode declaration for
	vim. Thanks to John Pye for the patch.

	* docs/buildbot.texinfo (Launching the daemons): fix @reboot job
	command line, mention the importance of running 'crontab' as the
	buildmaster/buildslave user. Thanks to John Pye for the catch.

2006-03-13  Brian Warner  <warner@lothar.com>

	* buildbot/status/words.py (IRC): add an optional password=
	argument, which will be sent to Nickserv in an IDENTIFY message at
	login, to claim the nickname. freenode requires this before the
	bot can sent (or reply to) private messages. Thanks to Clement
	Stenac for the patch.
	* docs/buildbot.texinfo (IRC Bot): document it

	* buildbot/status/builder.py (LogFile.merge): don't write chunks
	larger than chunkSize. Fixes SF#1349253.
	* buildbot/test/test_status.py (Log.testLargeSummary): test it
	(Log.testConsumer): update to match new internal chunking behavior

2006-03-12  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py: remove the last use of waitForDeferred

	* buildbot/test/test_maildir.py (MaildirTest): rename the
	'timeout' method, as it collides with trial's internals

	* buildbot/scripts/runner.py: add 'buildbot restart' command
	(stop): don't sys.exit() out of here, otherwise restart can't work
	* docs/buildbot.texinfo (Shutdown): document it

	* buildbot/buildset.py (BuildSet.__init__): clean up docstring
	* buildbot/status/html.py (Waterfall.__init__): same
	* buildbot/process/builder.py (Builder.startBuild): same
	* buildbot/process/base.py (BuildRequest): same
	* buildbot/sourcestamp.py (SourceStamp): same
	* buildbot/scheduler.py (Nightly): same

	* buildbot/__init__.py (version): bump to 0.7.2+ while between
	releases
	* docs/buildbot.texinfo: same

2006-02-17  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.2
	* docs/buildbot.texinfo: set version number to match
	* NEWS: update for 0.7.2
